Updated instructions, added examples